fixes spacing around signatures/edit messages

--- a/djangobb_forum/static/djangobb_forum/themes/scratch_default_theme_copy/style.css
+++ b/djangobb_forum/static/djangobb_forum/themes/scratch_default_theme_copy/style.css
@@ -170,7 +170,7 @@ DD.postavatar {MARGIN-BOTTOM: 5px}
 
 /* 8.3 Extra top spacing for signatures and edited by */
 
-DIV.postsignature, DIV.postmsg P.postedit {PADDING-TOP: 15px}
+DIV.postmsg P.postedit {PADDING-TOP: 15px}
 
 /* 8.4 Spacing for code and quote boxes */
 
